styles/styles.css
/* ... */
@media (1400px <= width) {
  /* Change margin & padding */
  :root {
    --wrapper-pi: 2rem;
    --header-pt: 1rem;
  }

  /* Header/navbar */
  header#nav {
    backdrop-filter: unset !important;
    background-color: unset !important;
    .burger-menu {
      grid-template-rows: 0fr !important;
      box-shadow: unset !important;
    }
  }

  .main-navbar {
    #navbar-links, .btn-signin {
      display: flex;
    }

    .btn-burger {
      display: none;
    }
  }

  /* Hero section */
  .hero-container {
    align-items: start;
    height: 800px;
    grid-template-columns: 1fr 1fr;
    grid-template-areas:  "hero-headline hero-images"
                          "hero-content hero-images";
    gap: 0rem;

    .headline {
      font-size: var(--fs-hero-headline-desktop);
      margin-top: 9rem;
      text-align: left;
    }
    .content {
      margin-top: 0;
    }
    .dlbuttons {
      flex-direction: row;
    }
    .discover-more {
      margin-top: 15rem;
    }

    .hero-images {
      .hero-img-shadow {
        bottom: 0;
        right: 425px;
      }
      .hero-img-back {
        bottom: 0;
        right: 235px;
      }
      .hero-img-front {
        right: 0;
        bottom: 0;
      }
    }
    
    /* Replace images with desktop versions */
    .hero-img-shadow {
      content: url('/assets/images/desktop/hero-shadow.png');
    }
    .hero-img-back {
      content: url('/assets/images/desktop/hero-back.png');
    }
    .hero-img-front {
      content: url('/assets/images/desktop/hero-front.png');
    }
  }

  /* Features section */
  .features-container {
    .content-container {
      display: grid;
      grid-template-columns: 1fr 2fr;
      margin-top: 7rem;
      gap: 8rem;

      .headline {
        margin-top: 0;
      }
      .feature-cards {
        gap: 3rem;
      }
    }


    .brandlogo-container {
      margin-top: 6rem;
      .desktop-only {
        display: flex;
      }
    }

    .left-content {
      display: block;
      position: relative;

      .phone-img {
        position: absolute;
      }
      .card-img {
        position: absolute;
        top: 90px;
        left: 25px;
      }
    }

    .right-content {
      grid-template-rows: min-content min-content auto;
      .headline, .paragraph {
        text-align: left;
      }
      .headline {
        font-size: var(--fs-h1);
        line-height: 1.3;
      }
      .paragraph {
        margin-top: .75rem;
      }
      
      .feature-cards {
        margin-top: 4.5rem;
      }
    }
  }

  /* How does it work-section */
  .how-container {
    h2 {
      margin-top: 5rem;
      font-size: var(--fs-h1);
      line-height: 1.3;
    }

    .mobile, .tablet {
      display: none;
    }
    .desktop {
      display: block;
    }

    .images-container {
      /* Increase spacing between images as container grows in width */
      max-width: unset;
      .mobile.img, .tablet.img {
        display: none;
      }
      .desktop.img {
        display: block;
        flex-grow: 1;
      }
      .img.left, .img.right {
        text-align: center;
      }
    }

    .image-description {
      width: 65%;
      max-width: 550px;
      h3 {
        width: 100%;
        font-size: 1.44rem;
        line-height: 1.4;  
      }
      p {
        margin-bottom: 6rem;
        line-height: 1.625;
      }
    }
  }

  /* Payment section */
  section#payment {
    display: block;
  }

  /* Reviews section */
  section#reviews {
    display: block;
  }

  /* FAQ-contact section */
  .faq-contact-container {
    margin-top: 7rem;
    display: grid;
    grid-template-columns: 0.6fr 1fr;
    grid-template-rows: auto 1fr;
    column-gap: 8rem;
    grid-template-areas:  "header faq-accordion"
                          "contact faq-accordion"
                          "subscribe subscribe";
    align-items: start;

    .header {
      grid-area: header;
      h2, p {
        text-align: left;
      }
    }
    p {
      margin-top: 2rem;
    }
    .faq-accordion {
      grid-area: faq-accordion;
    }
    .contact {
      grid-area: contact;
      margin-top: 3rem;
    }

    .subscribe {
      grid-area: subscribe;
      margin-top: 6rem;
      padding: 4rem 6rem;

      h2 {
        display: none;
      }
      .cta h2.desktop-text {
        display: block;
      }
    }
  }

  .footer {
    padding: 3rem 0;
  }
}
/* ... */

